--- a/test.html
+++ b/test.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>2022.html</title>
 </head>
 <body>
-asdfghjkl
+2022年春学期
 </body>
 </html>
