--- a/220511/index.html
+++ b/220511/index.html
@@ -40,6 +40,43 @@
   <p>君だけの推しモルカーを見つけるため、まずは公式サイトへゆこう！</p>
   <a class="btn btn-primary btn-lg" href="#" role="button">PUIPUIモルカー公式</a>
 </div>
+<div class="container">
+<h2 class="text-center py-3">主要キャラ</h2>
+  <div class="row">
+<div class="card" style="width: 18rem;">
+  <img src="..." alt="..." class="card-img-top">
+  <div class="card-body">
+    <h5 class="card-title">ポテト</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." alt="..." class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">シロモ</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." alt="..." class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">テディ</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <img src="..." alt="..." class="card-img-top">
+    <div class="card-body">
+      <h5 class="card-title">アビー</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+  </div>
+</div>
 <form class="container">
   <div class="form-group">
     <label for="exampleInputEmail1">好きなモルカー</label>
