自己紹介ページ

--- a/220511/index.html
+++ b/220511/index.html
@@ -37,7 +37,7 @@
   <p class="lead">モルモットが車になった世界が舞台の物語！</p>
   <p class="lead">癒しあり、友情あり、冒険あり、ハチャメチャアクションありのアニメーションを、君も楽しもう！</p>
   <hr class="my-4">
-  <p>君だけの推しモルカーを見つけるため、まずは公式サイトへゆこう！</p>
+  <p>君だけの推しモルカーを見つけるため、まずは公式サイトへ行こう！</p>
   <a class="btn btn-primary btn-lg" href="#" role="button">PUIPUIモルカー公式</a>
 </div>
 <div class="container">
@@ -111,17 +111,17 @@
 <div class="footer bg-success">
 <form class="container">
   <div class="form-group">
-    <label for="exampleInputEmail1">好きなモルカー</label>
+    <label for="exampleInputEmail1" class="text-white">好きなモルカー</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="シロモ">
-    <small id="emailHelp" class="form-text text-muted">あなたの好きなモルカーは絶対に口外しません。</small>
+    <small id="emailHelp" class="form-text text-muted text-white">あなたの好きなモルカーは絶対に口外しません。</small>
   </div>
   <div class="form-group">
-    <label for="exampleInputPassword1">好きな理由</label>
+    <label for="exampleInputPassword1" class="text-white">好きな理由</label>
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="100文字程度">
   </div>
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">心は決まりました</label>
+    <label class="form-check-label text-white" for="exampleCheck1">心は決まりました</label>
   </div>
   <button type="submit" class="btn btn-primary">モルカーの世界に行く</button>
 </form>
