自己紹介ページ

--- a/220511/index.html
+++ b/220511/index.html
@@ -108,7 +108,7 @@
     </div>
   </div>
 </div>
-<div class="footer bg-success">
+<div class="footer bg-success mt-3">
 <form class="container">
   <div class="form-group">
     <label for="exampleInputEmail1" class="text-white">好きなモルカー</label>
