--- a/220518/index.html
+++ b/220518/index.html
@@ -7,8 +7,9 @@
   <title>トップページコピー</title>
 </head>
 <body>
+<div class="container">
 
-<div class="row container">
+<div class="row">
   <div class="col-1">
 
   </div>
@@ -17,15 +18,15 @@
   </div>
 </div>
 
-<div class="row container">
+<div class="row">
   <div class="col-1">
-    <h6 class="py-3">ホーム</h6>
-    <h6 class="py-3">探索</h6>
-    <h6 class="py-3">ショート</h6>
-    <h6 class="py-3">登録チャンネル</h6>
-    <h6 class="py-3">ライブラリ</h6>
+    <p class="py-3 small">ホーム</p>
+    <p class="py-3 small">探索</p>
+    <p class="py-3 small">ショート</p>
+    <p class="py-3 small">登録チャンネル</p>
+    <p class="py-3 small">ライブラリ</p>
   </div>
-<div class="container col-11">
+<div class="col-11">
   <div class="border-bottom py-2">
     <button type="button" class="btn btn-dark">すべて</button>
     <button type="button" class="btn btn-light">ジャンル</button>
@@ -38,7 +39,7 @@
   </div>
 
   <div class="row">
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -47,7 +48,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -56,7 +57,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -65,7 +66,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -74,7 +75,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -83,7 +84,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -92,7 +93,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -101,7 +102,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -110,7 +111,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -119,7 +120,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -128,7 +129,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -137,7 +138,7 @@
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-3 py-4">
       <div class="card">
         <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">サムネイル</text></svg>
         <div class="card-body">
@@ -150,8 +151,6 @@
 
 </div>
 </div>
-
-<div class="container">
 
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
