自己紹介ページ

--- a/220720/index.html
+++ b/220720/index.html
@@ -8,16 +8,11 @@
 </head>
 <body>
 <div class="container-fluid">
+  <!--PC本文-->
   <!--ヘッダ-->
 
   <div class="alert alert-warning p-2 sticky-top" role="alert">
     <a class="text-dark h1 ml-4" href="#">SimNo</a>
-    <div class="float-right">
-    <a class="text-secondary h4 m-3" href="#">sim決定所</a>
-      <a class="text-secondary h4 m-3" href="#">何か</a>
-      <a class="text-secondary h4 m-3" href="#">何か</a>
-      <a class="text-secondary h4 m-3" href="#">何か</a>
-    </div>
   </div>
   <!--ヘッダ終わり-->
   <!--カルーセル-->
@@ -29,13 +24,14 @@
   </div>
   </div>
   <!--カルーセル終わり-->
-    <!--PC本文-->
+
   <div class="container">
     <p class="mt-5 font-weight-bold">最終更新日:2022/07/19</p>
     <!--導入文-->
     <p class="m-5">毎月の携帯代、ぶっちゃけ高くないですか？そんなあなたに！格安simをおすすめします！</p>
     <p class="m-5">でも、通信速度が遅いのは…大手キャリア以外は信用できない…と思っていませんか？</p>
     <p class="m-5">だからこそこの記事では利用タイプに分けてMNOの格安simを紹介していきます！</p>
+    <p class="m-5 text-muted">(MNOは回線を貸してる側なので安心感が違いますよ～)</p>
     <!--導入文終わり-->
     <div class="border-bottom m-5"></div>
     <!--MVNO,格安sim説明-->
@@ -45,7 +41,7 @@
       </a>
 
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
-        <a class="dropdown-item">格安simとは、大手携帯会社よりも格安の料金で利用できる携帯電話サービスのこと。</a>
+        <a class="dropdown-item">大手携帯会社主なプランよりも格安の料金で利用できる携帯電話サービスのことです。</a>
       </div>
     </div>
     <div class="dropdown">
@@ -54,10 +50,132 @@
       </a>
 
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink2">
-        <a class="dropdown-item" href="#">ドコモ・au・ソフトバンク・楽天のこと。自社の回線を利用できるため、通信速度が速く安定している。</a>
+        <a class="dropdown-item" href="#">ドコモ・au・ソフトバンク・楽天のこと。自社の回線を利用できるため、通信速度が速く安定しています。</a>
       </div>
     </div>
     <!--MVNO,格安sim説明終わり-->
+    <div class="border-bottom m-5"></div>
+    <!--格安sim紹介はじめ-->
+    <div class="container">
+    <!--povo,ahamo,linemo-->
+      <p class="m-4 h3">新キャリア</p>
+      <p class="m-3">まず初めに、大手3キャリアの新ブランドを紹介！</p>
+      <p class="m-3">独り身の人や自分で契約方法を調べられる人におすすめ！</p>
+      <p class="m-3">次の3ブランドは店舗での対応は一切してもらえず、オンライン限定なので注意！</p>
+      <p class="m-3">店舗で対応してもらえないと不安って人は飛ばしてサブブランドの検討をしよう！</p>
+    <div class="card" style="width: 45rem;">
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
+      <div class="card-body">
+        <img src="povo2.png" alt="..." class="img-thumbnail">
+        <h5 class="card-title">povo2.0</h5>
+        <p class="card-text">使いたい分だけを選べる新しい料金プラン。</p>
+        <p class="card-text">wifiがある場所だけで使う方や、速度が遅くても大丈夫という人は0円から利用可能。</p>
+        <p class="card-text">生活が不規則な人や毎月トッピングをするのが平気な人におすすめ！</p>
+        <a href="https://povo.jp/" class="btn btn-primary">公式ホームページへ</a>
+      </div>
+    </div>
+      <div class="border-bottom m-5"></div>
+
+      <div class="card" style="width: 45rem;">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
+        <div class="card-body">
+          <img src="linemo1.png" alt="..." class="img-thumbnail">
+          <h5 class="card-title">LINEMO</h5>
+          <p class="card-text">LINEをギガフリーで使えるプラン。</p>
+          <p class="card-text">3Gと20Gから選ぶことができ、ややこしい設定はいらない。</p>
+          <p class="card-text">外で頻繁にLINEを使う人、料金プランのみで安くしたい人におすすめ！</p>
+          <a href="https://www.linemo.jp/" class="btn btn-primary">公式ホームページへ</a>
+        </div>
+      </div>
+      <div class="border-bottom m-5"></div>
+      <div class="card" style="width: 45rem;">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
+        <div class="card-body">
+          <img src="ahamo1.png" alt="..." class="img-thumbnail">
+          <h5 class="card-title">ahamo</h5>
+          <p class="card-text">国内通話5分かけ放題がついてくるプラン。</p>
+          <p class="card-text">20Gと100Gから選ぶことができ、海外での通信にも対応。</p>
+          <p class="card-text">仕事での通話が多い人、大容量を安く使いたい人におすすめ！</p>
+          <a href="https://ahamo.com/" class="btn btn-primary">公式ホームページへ</a>
+        </div>
+      </div>
+      <div class="border-bottom m-5"></div>
+    <table class="table">
+      <thead>
+      <tr>
+        <th scope="col">おすすめ順</th>
+        <th scope="col">プラン名</th>
+        <th scope="col">携帯会社</th>
+        <th scope="col">料金</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>LIMEMO</td>
+        <td>SoftBank</td>
+        <td>3G:990円,20G:2728円</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>povo</td>
+        <td>au</td>
+        <td>0G:0円~,3G:990円~,20G:2163円~2700円</td>
+
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>ahamo</td>
+        <td>docomo</td>
+        <td>20G:2970円,100G:4950円</td>
+
+      </tr>
+      </tbody>
+    </table>
+    <!--povo,ahamo,linemoおわり-->
+    <div class="border-bottom m-5"></div>
+    <!--UQ,Yモバイルはじめ-->
+      <p class="m-4 h3">サブブランド</p>
+      <p class="m-3">続いて、auとSoftBankのサブブランドを紹介！</p>
+      <p class="m-3">こちらは従来のau,SoftBankの店舗でも対応してもらえるので、トラブル時も安心ですね。</p>
+      <p class="m-3">サブブランドはどちらも家族での契約がおすすめ！</p>
+      <p class="m-3">割引適用前は高額な請求をされるから契約前に割引の適用がされるかしっかり確認しよう！</p>
+
+      <div class="border-bottom m-5"></div>
+
+    <table class="table">
+      <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col">UQmobile</th>
+        <th scope="col">見出し２</th>
+        <th scope="col">見出し３</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>UQmobile</td>
+        <td>項目２</td>
+        <td>項目３</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Y!mobile</td>
+        <td>項目５</td>
+        <td>項目６</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>項目７</td>
+        <td>項目８</td>
+        <td>項目９</td>
+      </tr>
+      </tbody>
+    </table>
+    <!--UQ,Yモバイル終わり-->
+    </div>
+    <!--格安sim紹介おわり-->
     <div class="border-bottom m-5"></div>
   </div>
 
