自己紹介ページ

--- a/220720/index.html
+++ b/220720/index.html
@@ -10,7 +10,6 @@
 <div class="container-fluid">
   <!--PC本文-->
   <!--ヘッダ-->
-
   <div class="alert alert-warning p-2 sticky-top" role="alert">
     <a class="text-dark h1 ml-4" href="#">SimNo</a>
   </div>
@@ -19,19 +18,18 @@
   <div class="container">
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="mx-auto">
-      <img src="カルーセル.png" class="img-fluid mx-auto" alt="Responsive image">
+      <img src="simno2.png" class="img-fluid mx-auto" alt="Responsive image">
     </div>
   </div>
   </div>
   <!--カルーセル終わり-->
 
   <div class="container">
-    <p class="mt-5 font-weight-bold">最終更新日:2022/07/19</p>
+    <p class="mt-5 font-weight-bold">最終更新日:2022/07/20</p>
     <!--導入文-->
     <p class="m-5">毎月の携帯代、ぶっちゃけ高くないですか？そんなあなたに！格安simをおすすめします！</p>
     <p class="m-5">でも、通信速度が遅いのは…大手キャリア以外は信用できない…と思っていませんか？</p>
-    <p class="m-5">だからこそこの記事では利用タイプに分けてMNOの格安simを紹介していきます！</p>
-    <p class="m-5 text-muted">(MNOは回線を貸してる側なので安心感が違いますよ～)</p>
+    <p class="m-5">だからこそこの記事では安心して利用できるMNOの格安simを紹介していきます！</p>
     <!--導入文終わり-->
     <div class="border-bottom m-5"></div>
     <!--MVNO,格安sim説明-->
@@ -68,10 +66,10 @@
       <div class="card-body">
         <img src="povo2.png" alt="..." class="img-thumbnail">
         <h5 class="card-title">povo2.0</h5>
-        <p class="card-text">使いたい分だけを選べる新しい料金プラン。</p>
-        <p class="card-text">wifiがある場所だけで使う方や、速度が遅くても大丈夫という人は0円から利用可能。</p>
+        <p class="card-text">基本料0円で使える最後の料金プラン。</p>
+        <p class="card-text">wifiがある場所だけで使う方や、速度が遅くても大丈夫という人なら0円でも利用可能。</p>
         <p class="card-text">生活が不規則な人や毎月トッピングをするのが平気な人におすすめ！</p>
-        <a href="https://povo.jp/" class="btn btn-primary">公式ホームページへ</a>
+        <a href="https://povo.jp/" class="btn btn-secondary">公式ホームページへ</a>
       </div>
     </div>
       <div class="border-bottom m-5"></div>
@@ -84,7 +82,7 @@
           <p class="card-text">LINEをギガフリーで使えるプラン。</p>
           <p class="card-text">3Gと20Gから選ぶことができ、ややこしい設定はいらない。</p>
           <p class="card-text">外で頻繁にLINEを使う人、料金プランのみで安くしたい人におすすめ！</p>
-          <a href="https://www.linemo.jp/" class="btn btn-primary">公式ホームページへ</a>
+          <a href="https://www.linemo.jp/" class="btn btn-secondary">公式ホームページへ</a>
         </div>
       </div>
       <div class="border-bottom m-5"></div>
@@ -96,7 +94,7 @@
           <p class="card-text">国内通話5分かけ放題がついてくるプラン。</p>
           <p class="card-text">20Gと100Gから選ぶことができ、海外での通信にも対応。</p>
           <p class="card-text">仕事での通話が多い人、大容量を安く使いたい人におすすめ！</p>
-          <a href="https://ahamo.com/" class="btn btn-primary">公式ホームページへ</a>
+          <a href="https://ahamo.com/" class="btn btn-secondary">公式ホームページへ</a>
         </div>
       </div>
       <div class="border-bottom m-5"></div>
@@ -104,8 +102,8 @@
       <thead>
       <tr>
         <th scope="col">おすすめ順</th>
-        <th scope="col">プラン名</th>
-        <th scope="col">携帯会社</th>
+        <th scope="col">キャリア名</th>
+        <th scope="col">携帯会社名</th>
         <th scope="col">料金</th>
       </tr>
       </thead>
@@ -138,51 +136,146 @@
       <p class="m-4 h3">サブブランド</p>
       <p class="m-3">続いて、auとSoftBankのサブブランドを紹介！</p>
       <p class="m-3">こちらは従来のau,SoftBankの店舗でも対応してもらえるので、トラブル時も安心ですね。</p>
-      <p class="m-3">サブブランドはどちらも家族での契約がおすすめ！</p>
+      <p class="m-3">家族での契約やデータ繰り越しで使わなかった次の月に贅沢に使いたい人におすすめ！</p>
+      <p class="m-3">どちらも3G、15G、25Gが用意されているから新キャリアの20Gよりちょっと変えたい時にも！</p>
       <p class="m-3">割引適用前は高額な請求をされるから契約前に割引の適用がされるかしっかり確認しよう！</p>
 
+      <div class="card" style="width: 45rem;">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
+        <div class="card-body">
+          <img src="UQ1.png" alt="..." class="img-thumbnail">
+          <h5 class="card-title">UQmobile</h5>
+          <p class="card-text">自宅セット割を適用すれば低額で使えるプラン。</p>
+          <p class="card-text">・auでんきの契約で適用のでんきコース(おすすめ)</p>
+          <p class="card-text">・インターネット+固定電話、ケーブルテレビ、ポケットwifi、ホームルーターのいずれか契約で適用のインターネットコース(これに当てはまるものを契約してる人はすぐ解約するのが吉)</p>
+          <p class="card-text">でんきコースは電気代を携帯代とまとめて払えるから毎月の支払いも楽に！</p>
+          <p class="card-text">新電力をまだどことも契約していなくてギガ数もピッタリな人におすすめ！</p>
+          <p class="card-text"></p>
+          <a href="https://www.uqwimax.jp/mobile/newplan/" class="btn btn-secondary">公式ホームページへ</a>
+          </div>
+        </div>
+      <div class="border-bottom m-5"></div>
+
+      <div class="card" style="width: 45rem;">
+        <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
+        <div class="card-body">
+          <img src="ymobile1.png" alt="..." class="img-thumbnail">
+          <h5 class="card-title">Y!mobile</h5>
+          <p class="card-text">家族で入れば2回線目から低額で使えるプラン。</p>
+          <p class="card-text">家族でも1人でも1回線目は高額なままな点に注意！</p>
+          <p class="card-text">SoftBank光を契約している人は1回線目から割引が適用！</p>
+          <p class="card-text">SoftBank Airでも割引は適用されるがそんなものは今すぐ解約しよう！</p>
+          <p class="card-text">SoftBank光を既に利用している人におすすめ！</p>
+          <p class="card-text"></p>
+          <a href="https://www.ymobile.jp/plan/smartphone/" class="btn btn-secondary">公式ホームページへ</a>
+        </div>
+      </div>
       <div class="border-bottom m-5"></div>
 
     <table class="table">
       <thead>
       <tr>
-        <th scope="col"></th>
-        <th scope="col">UQmobile</th>
-        <th scope="col">見出し２</th>
-        <th scope="col">見出し３</th>
+        <th scope="col">おすすめ順</th>
+        <th scope="col">ブランド名</th>
+        <th scope="col">携帯会社名</th>
+        <th scope="col">割引適用条件</th>
       </tr>
       </thead>
       <tbody>
       <tr>
         <th scope="row">1</th>
         <td>UQmobile</td>
-        <td>項目２</td>
-        <td>項目３</td>
+        <td>au</td>
+        <td>電力会社をau電気に変更</td>
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>Y!mobile</td>
-        <td>項目５</td>
-        <td>項目６</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>項目７</td>
-        <td>項目８</td>
-        <td>項目９</td>
+        <td>SoftBank</td>
+        <td>SoftBank光の利用</td>
       </tr>
       </tbody>
     </table>
+      <div class="border-bottom m-5"></div>
     <!--UQ,Yモバイル終わり-->
     </div>
     <!--格安sim紹介おわり-->
+    <!--最終評価はじめ-->
+    <p class="h3 m-4">最終評価</p>
+    <p class="m-3">最後にこれまで紹介してきた中から4つの利用パターンに合わせたおすすめのプランを紹介します！</p>
+    <table class="table">
+      <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col">どんな人におすすめか</th>
+        <th scope="col">どのプランか</th>
+        <th scope="col">おすすめの理由</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <th scope="row"></th>
+        <td>とにかく楽に安く使いたい人</td>
+        <td><a href="https://www.uqwimax.jp/mobile/newplan/">UQmobile</a></td>
+        <td>割引適用条件であるauでんき契約で通信費が安くなって電気代を支払う手間もなくなるため</td>
+      </tr>
+      <tr>
+        <th scope="row"></th>
+        <td>余計なことをせずに安く使いたい人</td>
+        <td><a href="https://www.linemo.jp/">LINEMO</a></td>
+        <td>割引適用条件を満たすことやギガを買うことをしなくても低額で利用することができるため</td>
+      </tr>
+      <tr>
+        <th scope="row"></th>
+        <td>常に最適なデータ量で生活したい人</td>
+        <td><a href="https://povo.jp/">pobo2.0</a></td>
+        <td>その月の自分の生活スタイルに合わせて最適なデータ量を購入することができるため</td>
+      </tr>
+      <tr>
+        <th scope="row"></th>
+        <td>大容量を安く使いたい人</td>
+        <td><a href="https://ahamo.com/">ahamo</a></td>
+        <td>新キャリア、サブブランドの中で唯一100Gという大容量が用意されているため</td>
+      </tr>
+      </tbody>
+    </table>
     <div class="border-bottom m-5"></div>
+    <!--最終評価おわり-->
+    <!--番外編はじめ-->
+    <p class="m-4 h3">番外編</p>
+    <p class="m-3">過去の最強(都心では)楽天モバイルについても紹介します。</p>
+    <p class="m-3">奇跡の1Gまで携帯代無料、通話代もRakutenLinkを利用すれば無料の大盤振る舞い。</p>
+    <p class="m-3">今回は1Gまで無料が10月31日で終了してしまうことを受け、番外編となりました…</p>
+    <p class="m-3">せめて通信品質が向上すれば楽天ポイントと合わせることで有力な存在になり得たのに…</p>
+    <div class="card" style="width: 45rem;">
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="40" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"></svg>
+      <div class="card-body">
+        <img src="楽天モバイル1.png" alt="..." class="img-thumbnail">
+        <h5 class="card-title">楽天モバイル</h5>
+        <p class="card-text">10月31日までは1Gまで通信費無料の神プラン。</p>
+        <p class="card-text">それ以降は~3G、~20G、20G~無制限の段階性プラン。</p>
+        <p class="card-text">エントリー不要で楽天SPUが最大3.5%UP！</p>
+        <p class="card-text">20G以上つかう人ならその後は何G使っても料金が変わらないのがポイント！</p>
+        <p class="card-text">楽天経済圏にどっぷりと浸かっている人、20Gを優に超えて使用する人におすすめ！</p>
+        <p class="card-text"></p>
+        <a href="https://network.mobile.rakuten.co.jp/fee/un-limit/?l-id=top_un-limit-banner_fee_unlimit" class="btn btn-secondary">公式ホームページへ</a>
+      </div>
+    </div>
+    <!--番外編おわり-->
   </div>
 
     <!--PC本文終わり--->
     <!--スマホ本文-->
 
     <!--スマホ本文終わり-->
+
+  <!--フッターはじめ-->
+  <div class="container-fluid">
+    <div class="alert alert-secondary mt-5 m-0" role="alert">
+      <h6 class="container m-2">ヘルプ｜利用規約｜プライバシーポリシー｜©SimNo Corporation</h6>
+    </div>
+  </div>
+  <!--フッターおわり-->
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
