自己紹介ページ

--- a/220720/index.html
+++ b/220720/index.html
@@ -33,7 +33,7 @@
     <div class="border-bottom m-5"></div>
     <!--MVNO,格安sim説明-->
     <div class="dropdown mb-3">
-      <a class="btn btn-secondary dropdown-toggle"role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         格安simって何？
       </a>
 
