自己紹介ページ

--- a/220720/index.html
+++ b/220720/index.html
@@ -38,7 +38,7 @@
       </a>
 
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink2">
-        <a class="dropdown-item">大手携帯会社主なプランよりも、格安の料金で利用できる携帯電話サービスのことです。</a>
+        <a class="dropdown-item">大手携帯会社の主なプランよりも、格安の料金で利用できる携帯電話サービスのことです。</a>
       </div>
     </div>
     <div class="dropdown">
@@ -58,7 +58,7 @@
     <!--povo,ahamo,linemo-->
       <p class="m-4 h3">新キャリア</p>
       <p class="m-3">まず初めに、大手3キャリアの新ブランドを紹介！</p>
-      <p class="m-3">独り身の人や自分で契約方法を調べられる人におすすめ！</p>
+      <p class="m-3">一回線だけ契約する人やネットでの契約に抵抗がない人におすすめ！</p>
       <p class="m-3">次の3ブランドは店舗での対応は一切してもらえず、オンライン限定なので注意！</p>
       <p class="m-3">店舗で対応してもらえないと不安って人は飛ばしてサブブランドの検討をしよう！</p>
     <div class="card" style="width: 45rem">
