自己紹介ページ

--- a/220720/index.html
+++ b/220720/index.html
@@ -32,6 +32,7 @@
     <!--導入文終わり-->
     <div class="border-bottom m-5"></div>
     <!--MVNO,格安sim説明-->
+    <!--pc-->
     <div class="d-none d-md-block">
     <div class="dropdown mb-3">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,6 +54,8 @@
       </div>
     </div>
     </div>
+    <!--pcおわり-->
+    <!--スマホはじめ-->
     <div class="d-block d-md-none">
     <div class="dropdown mb-3">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,8 +63,8 @@
       </a>
 
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink1">
-        <p class="dropdown-item">大手携帯会社主なプランよりも格安の料金で</p>
-        <p class="dropdown-item">利用できる携帯電話サービスのことです。</p>
+        <p class="dropdown-item">大手携帯会社主なプランよりも格安の料金で利用できる携帯電話サービスのことです。</p>
+        <p class="dropdown-item"></p>
       </div>
     </div>
     <div class="dropdown">
@@ -78,6 +81,7 @@
       </div>
     </div>
     </div>
+    <!--スマホおわり-->
     <!--MVNO,格安sim説明終わり-->
     <div class="border-bottom m-5"></div>
     <!--格安sim紹介はじめ-->
