--- a/221201/APIsample.html
+++ b/221201/APIsample.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JSON fetch</title>
+  <title>JSON API</title>
 </head>
 <body>
 
-<input type="text" id="zipcode">
-<button id="search" onClick="doSearch()">探索</button>
+<input type="text" id="books">
+<button id="search" onClick="doSearch()">検索</button>
 <ul id="answer"></ul>
 
 <script type="text/javascript" src="APIsample.js"></script>
