自己紹介ページ

--- a/230118/morublo.html
+++ b/230118/morublo.html
@@ -26,11 +26,11 @@
   <div class="container">
     <!--導入文-->
     <h2 class="m-5">持ってるモルを記録したかった</h2>
-    <h2 class="m-5">見た人は自慢されるだけ</h2>
+    <h2 class="m-5">記録方法を簡単にしていきたい</h2>
     <!--導入文終わり-->
     <div class="border-bottom m-5"></div>
     <!--モルカーとは-->
-    <h4 class="m-3">一応説明</h4>
+    <h4 class="m-3">モルカーの簡単な説明</h4>
     <!-- Button trigger modal -->
     <button id="explain" type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalCenter">
       モルカーって何？
